<resources>
    <!-- ERROR MESSAGES -->
    <string name="error_game_name">Game name is <b>required</b>!</string>
    <string name="error_multiplier">Multiplier is <b>required</b>!</string>
    <!--Main menu-->
    <string name="app_name">Bridge</string>
    <string name="start_new_game">New game</string>
    <string name="active_games">Active games</string>
    <!--New game menu-->
    <string name="new_game_setting">New game setting</string>
    <string name="rule">Rule</string>
    <string name="players">Players</string>
    <!--Field for Rule fragment-->
    <string name="game_name">Game name</string>
    <string name="change_mode">Change mode</string>
    <string name="points_to_finish">Points to finish</string>
    <string name="lower_cards">Lower cards</string>
    <string name="spades_of_jack">Spades of Jack</string>
    <string name="spades_of_queen">Spades of Queen</string>
    <string name="points_for_the_6_cards">the 6</string>
    <string name="points_for_the_7_cards">the 7</string>
    <string name="points_for_the_8_cards">the 8</string>
    <string name="points_for_the_9_cards">the 9</string>
    <string name="points_for_the_10_cards">the 10</string>
    <string name="points_for_jack_cards">Jack</string>
    <string name="points_for_spades_of_jack_cards">Spades of Jack</string>
    <string name="points_for_queen_cards">Queen</string>
    <string name="points_for_spades_of_queen_cards">Spades of Queen</string>
    <string name="points_for_king_cards">King</string>
    <string name="points_for_ace_cards">Ace</string>
    <!--default values for cards-->
    <string name="setting_for_card_cost">Setting for card cost:</string>
    <string name="default_for_lower">default: 0</string>
    <string name="default_the10">default: 10</string>
    <string name="default_Jack">default: 10</string>
    <string name="default_spadesOfJack">default: 40</string>
    <string name="default_Queen">default: 25</string>
    <string name="default_SpadesOfQueen">default: 50</string>
    <string name="default_King">default: 10</string>
    <string name="default_Ace">default: 10</string>
    <!-- Field for Rule fragment -->
    <string name="new_player">New Player</string>
    <string name="nickname">Your nickname</string>
    <!-- Buttons in toolbar -->
    <string name="start">Start</string>
    <!-- Game card -->
    <string name="active_cnt_players">Players:</string>
    <string name="active_current_round">Current round:</string>
    <string name="reset">Reset</string>
    <string name="setting">Setting</string>
    <string name="next_round">Next round</string>
    <string name="scoring">Scoring</string>
    <string name="multiplier">Multiplier</string>
    <string name="total_points">Total points:</string>
    <string name="set_multiplier">set multiplier</string>
    <string name="x">x</string>
    <string name="zero">0</string>
    <string name="confirm">Are you sure that you want to begin new round with this points?</string>
    <string name="confirm_back">Are you sure that you want back without any changes?</string>
    <string name="confirm_title">Are you sure?</string>
</resources>
