<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="122dp"
                    android:layout_height="wrap_content"
                    android:text="@string/game_name"
                    android:textSize="@dimen/text_size" />

                <EditText
                    android:id="@+id/game_name"
                    android:layout_width="247dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/game_name"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/points_to_finish"
                    android:textSize="@dimen/text_size" />

                <EditText
                    android:id="@+id/point_to_finish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/points_to_finish"
                    android:inputType="number"
                    android:maxLength="9"
                    android:selectAllOnFocus="false" />
            </LinearLayout>

            <Switch
                android:id="@+id/flag_lower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lower_cards"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/flag_spadesOfJack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spades_of_jack"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/flag_spadesOfQueen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/spades_of_queen"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/flag_changeMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_mode"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/setting_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_for_card_cost"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/setting_cost_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/cost_lower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/cost_the6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/default_for_lower"
                        android:inputType="number"
                        android:maxLength="9"
                        android:selectAllOnFocus="false" />

                    <EditText
                        android:id="@+id/cost_the7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/default_for_lower"
                        android:inputType="number"
                        android:maxLength="9"
                        android:selectAllOnFocus="false" />

                    <EditText
                        android:id="@+id/cost_the8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/default_for_lower"
                        android:inputType="number"
                        android:maxLength="9"
                        android:selectAllOnFocus="false" />

                    <EditText
                        android:id="@+id/cost_the9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/default_for_lower"
                        android:inputType="number"
                        android:maxLength="9"
                        android:selectAllOnFocus="false" />
                </LinearLayout>

                <EditText
                    android:id="@+id/cost_the10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/default_the10"
                    android:inputType="number"
                    android:maxLength="9"
                    android:selectAllOnFocus="false" />

                <EditText
                    android:id="@+id/cost_Jack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/default_Jack"
                    android:inputType="number"
                    android:maxLength="9"
                    android:selectAllOnFocus="false" />

                <EditText
                    android:id="@+id/cost_spadesOfJack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/default_spadesOfJack"
                    android:inputType="number"
                    android:maxLength="9"
                    android:selectAllOnFocus="false" />

                <EditText
                    android:id="@+id/cost_Queen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/default_Queen"
                    android:inputType="number"
                    android:maxLength="9"
                    android:selectAllOnFocus="false" />


                <EditText
                    android:id="@+id/cost_SpadesOfQueen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/default_SpadesOfQueen"
                    android:inputType="number"
                    android:maxLength="9"
                    android:selectAllOnFocus="false" />

                <EditText
                    android:id="@+id/cost_King"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/default_King"
                    android:inputType="number"
                    android:maxLength="9"
                    android:selectAllOnFocus="false" />

                <EditText
                    android:id="@+id/cost_Ace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/default_Ace"
                    android:inputType="number"
                    android:maxLength="9"
                    android:selectAllOnFocus="false" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
