<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/game_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/game_name"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="53dp" />

            <EditText
                android:id="@+id/point_to_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/points_to_finish"
                android:inputType="numberDecimal"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="115dp" />

            <CheckBox
                android:id="@+id/flag_lower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lower_cards"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="171dp" />

            <CheckBox
                android:id="@+id/flag_spadesOfJack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spades_of_jack"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="224dp" />

            <CheckBox
                android:id="@+id/flag_spadesOfQueen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spades_of_queen"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="267dp" />

            <CheckBox
                android:id="@+id/flag_changeMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_mode"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="314dp" />

           <include layout="@layout/layout_card_cost"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>